2008-06-29  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (stamps/icedtea-ecj.stamp): Add dependency on
	stamps/cacao.stamp.
	(stamps/cacao.stamp): Add dependency on stamps/rt-class-files.stamp.
	* Makefile.in: Regenerated.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add ICEDTEA_FSG_PATCHES
	to EXTRA_DIST.
	* Makefile.in: Regenerated.
	
2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Separate out ICEDTEA_FSG_PATCHES and
	add dist-openjdk-fsg target.
	* Makefile.in,
	* aclocal.m4,
	* configure:
	Regenerated.

2008-06-29  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-jdk-docs-target.patch: New.
	* Makefile.am: Apply patch.
	* Makefile.in: Regenerate.
	
2008-06-27  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/services/XPersistenceService.java: Throw a
	FileNotFoundException if the persistence store does not exist.

2008-06-27  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/Launcher.java: Exit the application if there was
	a LaunchException caught.

2008-06-26  Joshua Sumali  <jsumali@redhat.com>

	* README: Removed documentation about --enable-netx-plugin. This feature
	is enabled by default now.
	* rt/net/sourceforge/jnlp/Launcher.java: Do not show the download
	indicator if we are using gcjwebplugin.

2008-06-26  Lillian Angel  <langel@redhat.com>

	* configure: Regenerated.

2008-06-26  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added new patch to the list.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.
	* patches/icedtea-toolkit.patch: New file.

2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Don't bother with the
	shared object files.  We don't need
	them any more.
	* Makefile.in: Regenerated.

2008-06-26 Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* Makefile.am (stamps/cacao.stamp): Depend on stamps/extract.stamp.
	* Makefile.in: Regenerated.
